# kotton

./: makeAndTest.sh
code/: CMakeLists.txt  kotton.cpp  test.cpp
code/include/kotton/: kotton.hpp
